--- a/flexibility-structure/index.html
+++ b/flexibility-structure/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css" />
   <title>Document</title>
+  <script src="index.js" type="module" defer></script>
 </head>
 <body>
   <div class="header-nav">
@@ -16,5 +17,4 @@
 
   <div data-toc></div>
 </body>
-<script src="index.js"></script>
 </html>
