refact calc-word-5

--- a/calc-word-5/index.html
+++ b/calc-word-5/index.html
@@ -42,7 +42,9 @@
     </div>
 
     <div class="chars-panel">
-      <div class="chars-panel-title">Подходящие слова</div>
+      <div class="chars-panel-title">Подходящие слова
+        <span class="words"></span>
+      </div>
       <div id="words" spellcheck="false" class="once-chars-boxes result char-input"></div>
     </div>
 
