--- a/company-rules-template/index.html
+++ b/company-rules-template/index.html
@@ -27,6 +27,7 @@
                       <div class="sidebar-switcher" tabindex="0">
                         <!-- Logo container -->
                         <div class="switcher-logo-container">
+                          <!-- Icon -->
                           <div class="switcher-logo-icon">
                             <div class="switcher-logo-icon-container">
                               <div class="switcher-logo-icon-container-block">
@@ -38,6 +39,7 @@
                               </div>
                             </div>
                           </div>
+                          <!-- Text -->
                           <div class="switcher-logo-text">
                             <div class="switcher-logo-text-container">
                               <div class="switcher-logo-text-container-text">
@@ -76,7 +78,25 @@
 
         <!-- PAGE -->
         <div class="page">
-          <header></header>
+          <header class="header">
+            <div class="topbar">
+              <div class="header-container">
+                <div class="header-switcher-icons-container">
+                  <div role="button" tabindex="0" class="header-switcher-icon-hamburger">
+                    <svg role="graphics-symbol" viewBox="0 0 14 14" class="header-switcher-icon-svg">
+                      <path d="M0,1.25 L14,1.25 L14,2.75 L0,2.75 L0,1.25 Z M0,6.25 L14,6.25 L14,7.75 L0,7.75 L0,6.25 Z M0,11.25 L14,11.25 L14,12.75 L0,12.75 L0,11.25 Z"></path>
+                    </svg>
+                  </div>
+
+                  <div role="button" tabindex="0" class="header-switcher-icon-open" aria-label="Lock sidebar open">
+                    <svg role="graphics-symbol" viewBox="0 0 16 16" class="header-switcher-icon-svg doubleChevronRight">
+                      <path d="M2.25781 14.1211C2.47656 14.1211 2.66797 14.0391 2.81836 13.8887L8.14355 8.67969C8.32812 8.49512 8.41699 8.29688 8.41699 8.06445C8.41699 7.8252 8.32812 7.62012 8.14355 7.44922L2.81836 2.24023C2.66797 2.08984 2.4834 2.00781 2.25781 2.00781C1.81348 2.00781 1.46484 2.35645 1.46484 2.80078C1.46484 3.0127 1.55371 3.21777 1.7041 3.375L6.50977 8.05762L1.7041 12.7539C1.55371 12.9043 1.46484 13.1094 1.46484 13.3281C1.46484 13.7725 1.81348 14.1211 2.25781 14.1211ZM8.36914 14.1211C8.58789 14.1211 8.77246 14.0391 8.92285 13.8887L14.2549 8.67969C14.4395 8.49512 14.5283 8.29688 14.5283 8.06445C14.5283 7.8252 14.4326 7.62012 14.2549 7.44922L8.92285 2.24023C8.77246 2.08984 8.58789 2.00781 8.36914 2.00781C7.9248 2.00781 7.56934 2.35645 7.56934 2.80078C7.56934 3.0127 7.66504 3.21777 7.81543 3.375L12.6211 8.05762L7.81543 12.7539C7.66504 12.9043 7.56934 13.1094 7.56934 13.3281C7.56934 13.7725 7.9248 14.1211 8.36914 14.1211Z"></path>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </header>
           <main></main>
         </div>
       </div>
@@ -88,6 +108,6 @@
     </div>
   </div>
 
-  <script type="module" src="index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 </html>
