--- a/content-editable/index.html
+++ b/content-editable/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <input type="text" id="inputId">
     <div class="item" contenteditable="true">
       If needed, use basic unit tests for pure functions such as particularly complex reducers or selectors. However, in
       many cases, these are just implementation details that are covered by integration tests instead.
